--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "concurrently": "^7.1.0",
     "css-loader": "^6.7.1",
     "electron": "^23.1.1",
+    "eslint": "^8.3.0",
+    "eslint-config-react-app": "^7.0.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
