--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "@reactivers/use-measure": "^1.0.0",
+    "bfj": "^7.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
